--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
 					<!--~~~~~ Start Widget Links ~~~~~-->
 					<div class="col-lg-2 col-md-6">
 						<aside class="widget widget_links">
-							<h2 class="widget-title">Quick Links</h2>
+							<h2 class="widget-title">Quickkjjnmnnm Links</h2>
 							<div class="widget-content">
 								<ul>
 									<li><a href="#">About Us</a></li>
