--- a/about.html
+++ b/about.html
@@ -321,8 +321,7 @@
 					<div class="footer-bottom-content">
 						<div class="copyright-text text-center">
 							<p>
-								Copyright - 2021 EasyArt theme by
-								<a href="#">HTMLguru</a>
+								Copyright - 2024
 							</p>
 						</div>
 						<!--~./ end copyright text ~-->
