--- a/index09.html
+++ b/index09.html
@@ -572,13 +572,6 @@
 			</div>
 		</div>
 		<!--~./ end main wrapper ~-->
-
-		<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-      Start Subscribe Section
-		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-		<!--~./ end subscribe section ~-->
-
 		<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 				Start Site Footer
 		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -676,8 +669,7 @@
 							<div class="footer-bottom-content">
 								<div class="copyright-text text-center">
 									<p>
-										Copyright - 2021 EasyArt theme by
-										<a href="#">HTMLguru</a>
+										Copyright - 2024
 									</p>
 								</div>
 								<!--~./ end copyright text ~-->
