--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 										</p>
 										<div class="author-sign">
 										</div>
-									</div>
+									</div>	
 								</div>
 							</aside>
 							<!--~./ end about me widget ~-->
@@ -686,8 +686,6 @@
 								<div class="widget-content">
 									<ul>
 										<li>
-											<a href="#">Breaking News <span class="count"></span></a>
-										</li>
 										<li>
 											<a href="#">News <span class="count"></span></a>
 										</li>
@@ -960,8 +958,7 @@
 							<div class="footer-bottom-content">
 								<div class="copyright-text text-center">
 									<p>
-										Copyright - 2021 EasyArt theme by
-										<a href="#">HTMLguru</a>
+										Copyright - 2024
 									</p>
 								</div>
 								<!--~./ end copyright text ~-->
