--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<!-- Specific Meta
     ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Blog And Magazine HTML5 Template" />
+	<meta name="description" content=" />
 	<meta name="keywords"
-		content="HTML5, Template, Design, blog, blogger, clean, flat, food, html, magazine, modern, news, personal, photographer, template, white  " />
+		content="HTML5,blog, blogger, clean, flat, food, html, , modern, news, personal, photographer, white  " />
 
 	<!-- Titles
     ================================================== -->
-	<title>Jogjavibes </title>
+	<title>JogjaVibes</title>
 
 	<!-- Favicons
     ================================================== -->
