--- a/404.html
+++ b/404.html
@@ -16,11 +16,11 @@
 
 	<!-- Titles
     ================================================== -->
-	<title>EasyArt | Personal Blog HTML Template</title>
+	<title>JogjaVibe</title>
 
 	<!-- Favicons
     ================================================== -->
-	<link rel="shortcut icon" href="assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="assets/images/logo.ico" />
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/android-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-icon-144x144.png" />
 
