--- a/event-concert.html
+++ b/event-concert.html
@@ -10,20 +10,20 @@
 	<!-- Specific Meta
     ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Blog And Magazine HTML5 Template" />
+	<meta name="description" content=" />
 	<meta name="keywords"
-		content="HTML5, Template, Design, blog, blogger, clean, flat, food, html, magazine, modern, news, personal, photographer, template, white  " />
+		content="HTML5,blog, blogger, clean, flat, food, html, , modern, news, personal, photographer, white  " />
 
 	<!-- Titles
     ================================================== -->
-	<title>EasyArt | Personal Blog HTML Template</title>
+	<title>JogjaVibes</title>
 
 	<!-- Favicons
     ================================================== -->
-	<link rel="shortcut icon" href="assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="assets/images/logo.ico" />
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/android-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-icon-144x144.png" />
-
+	
 	<!-- Custom Font
 	================================================== -->
 	<link
